<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/topLayout"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@drawable/home_title_bg" >

        <ImageButton
            android:id="@+id/map_btn"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/map_btn"
            android:textColor="#FFF" />

        <LinearLayout
            android:id="@+id/typeLl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/allseller"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/line1"
                    android:layout_width="70dp"
                    android:layout_height="3dp"
                    android:background="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/ll_some"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/someseller"
                    android:textColor="#FFF"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="70dp"
                    android:layout_height="3dp"
                    android:background="@color/white"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/search_it"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/search_btn_big" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="#FFF" >

        <TextView
            android:id="@+id/tv_shanghuleixing"
            android:layout_width="0.0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sellertype"
            android:textColor="#ED6D00" />

        <ImageView
            android:id="@+id/arrowdown1"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrowdownyellow" />

        <View
            android:layout_width="5dip"
            android:layout_height="50dip"
            android:orientation="vertical" />

        <View
            android:layout_width="1dip"
            android:layout_height="50dip"
            android:background="#EEE"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_quancheng"
            android:layout_width="0.0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/allcity"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/arrowdown2"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrowdowngrey" />

        <View
            android:layout_width="5dip"
            android:layout_height="50dip"
            android:orientation="vertical" />

        <View
            android:layout_width="1dip"
            android:layout_height="50dip"
            android:background="#EEE"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_zhinengpaixu"
            android:layout_width="0.0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/smartsort"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/arrowdown3"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrowdowngrey" />

        <View
            android:layout_width="5dip"
            android:layout_height="50dip"
            android:orientation="vertical" />

        <View
            android:layout_width="1dip"
            android:layout_height="50dip"
            android:background="#EEE"
            android:orientation="vertical" />

        <TextView
            android:id="@+id/tv_shaixuan"
            android:layout_width="0.0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sift"
            android:textColor="#000" />

        <ImageView
            android:id="@+id/arrowdown4"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/arrowdowngrey" />

        <View
            android:layout_width="5dip"
            android:layout_height="50dip"
            android:orientation="vertical" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/f2_honggang"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="6dp"
            android:background="#EEE" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="4dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/b2_shanghuleixing"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="#FF8E14"
                android:visibility="visible" />

            <ImageView
                android:id="@+id/b2_quancheng"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="#FF8E14"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/b2_zhinengpaixu"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="#FF8E14"
                android:visibility="invisible" />

            <ImageView
                android:id="@+id/b2_shaixuan"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="1"
                android:background="#FF8E14"
                android:visibility="invisible" />
        </LinearLayout>
    </RelativeLayout>
	<View
        android:id="@+id/main_div_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eee"/>
    <ListView
        android:id="@+id/list_fujin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="-1dp" >
    </ListView>

</LinearLayout>